[package]
name = "armonia"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
egui = "0.34.3"
enumflags2 = "0.7.12"
lawliet-types = {path="../lawliet/lawliet-types"}
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
