[package]
name = "yagami"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.33"
sha2 = "0.11.0"
tokio = { version = "1.53.1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "io-util",
  "sync",
  "full",
] }
tokio-util = "0.7.19"
lawliet-types = { path = "../lawliet/lawliet-types" }
dotenvy = "0.15.7"
serde_json = "1.0.151"
serde = "1.0.229"
getrandom = "0.4.3"
