[package]
name = "armonia"
version = "0.1.0"
edition = "2024"

[lib]
name = "armonia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lawliet-types = { path = "../../lawliet/lawliet-types" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "=0.0.12"


