[package]
name = "lawliet-types"
version = "0.1.0"
edition = "2024"

[dependencies]
enumflags2 = { version = "0.7.12", features = ["serde"] }
indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
slotmap = { version = "1.1.1", features = ["serde"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
